--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lottie-react": "^2.4.0",
     "maath": "^0.10.8",
     "react": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scroll-trigger": "^0.6.14",
