--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gsap": "^3.12.5",
     "hover-effect": "^1.2.1",
     "lenis": "^1.1.11",
+    "leva": "^0.9.35",
     "lottie-react": "^2.4.0",
     "maath": "^0.10.8",
     "react": "^18.3.1",
